--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,12 +3,18 @@ Type: Package
 Title: Ellipsoid-based Virtual Niches
 Version: 0.0.1
 Authors@R: c(
-    person("Marlon E.", "Cobos", email = "manubio13@gmail.com", role = c("aut","cre")),
-    person("Claudia", "Nunez-Penichet", email = "claununez199o@gmail.com ", role = "aut"),
-    person("Jorge", "Soberon", email = "jsoberon@ku.edu", role = "aut"),
-    person("A. Townsend", "Peterson", email = "town@ku.edu", role = "aut"))
+    person("Marlon E.", "Cobos", email = "manubio13@gmail.com", 
+           role = c("aut","cre"), comment = c(ORCID = "0000-0002-2611-1767")),
+    person("Claudia", "Nunez-Penichet", email = "claununez199o@gmail.com ", 
+           role = "aut", , comment = c(ORCID = "0000-0001-7442-8593")),
+    person("Divyansh", "Chawla", email = "code.divyansh@gmail.com", 
+           role = "aut"),
+    person("Jorge", "Soberon", email = "jsoberon@ku.edu", role = "aut",
+           comment = c(ORCID = "0000-0003-2160-4148")),
+    person("A. Townsend", "Peterson", email = "town@ku.edu", role = "aut",
+           comment = c(ORCID = "0000-0003-0243-2379")))
 Maintainer: Marlon E. Cobos <manubio13@gmail.com>
-Date: 2021-02-01
+Date: 2021-02-06
 Description: 
     Set of tools and shiny application to create and explore ellispoid-based 
     virtual niches and predictions. 
@@ -33,3 +39,4 @@ Depends:
 License: GPL3
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.1.1
