--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,42 +1,32 @@
 Package: evniche
 Type: Package
 Title: Ellipsoid-based Virtual Niches
-Version: 0.0.1
+Version: 0.0.2
 Authors@R: c(
     person("Marlon E.", "Cobos", email = "manubio13@gmail.com", 
            role = c("aut","cre"), comment = c(ORCID = "0000-0002-2611-1767")),
-    person("Claudia", "Nunez-Penichet", email = "claununez199o@gmail.com ", 
-           role = "aut", , comment = c(ORCID = "0000-0001-7442-8593")),
-    person("Divyansh", "Chawla", email = "code.divyansh@gmail.com", 
-           role = "aut"),
     person("Jorge", "Soberon", email = "jsoberon@ku.edu", role = "aut",
            comment = c(ORCID = "0000-0003-2160-4148")),
     person("A. Townsend", "Peterson", email = "town@ku.edu", role = "aut",
            comment = c(ORCID = "0000-0003-0243-2379")))
 Maintainer: Marlon E. Cobos <manubio13@gmail.com>
-Date: 2021-02-06
+Date: 2024-10-22
 Description: 
-    Set of tools and shiny application to create and explore ellispoid-based 
-    virtual niches and predictions. 
+    Set of tools to create and explore ellispoid-based virtual niches. 
 URL: https://github.com/marlonecobos/evniche
 BugReports: https://github.com/marlonecobos/evniche/issues
 Imports:
     data.table (>= 1.12),
     ellipse (>= 0.4),
+    graphics,
     MASS (>= 7.3),
-    raster (>= 2.6),
-    rgdal (>= 1.4),
-    rgeos (>= 0.3),
+    terra (>= 1.7),
+    rgl (>= 1.3),
     scales (>= 1.0),
-    shiny (>= 1.5),
-    shinyFiles (>= 0.8),
-    shinythemes (>= 1.1),
-    sp (>= 1.2),
     stats
 Depends: 
-    R (>= 3.5),
-    shiny (>= 1.5)
+    R (>= 3.5)
 License: GPL3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.3.1
